# rust-term

./: Cargo.toml  README.md  flake.nix  package.nix
src/: enums.rs  lib.rs  main.rs  parsers.rs
