[package]
name = "rust_term"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["term", "process", "fs"], default-features = false }
iced = { version = "0.13.1", features = ["advanced", "smol", "wgpu"], default-features = false }
bpaf = { version = "0.9.20", features = ["derive"], default-features = false }
heapless = "0.8.0"
nom = "8.0.0"

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
restriction = "deny"
style = "deny"
suspicious = "deny"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
